--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
-*{
+
+  *{
     scroll-behavior: smooth;
+    
+}
+p{
+    font-family: poppins;
 }
 /* animate */
 .animated-icon1, .animated-icon2, .animated-icon3 {
@@ -80,8 +85,22 @@
     
     
 /* animate */
-h1,h2,h5{
-    font-family: 'libre baskerville';
+h1,h2,h3{
+    font-family:"Dala Floda Web Roman No. 2 Regular" !important;
+    font-size:40px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+h1{
+    font-size: 62px;
+}
+h2{
+    font-size: 42px;
+}
+h3{
+    font-size: 22px;
 }
 body{
     overflow-x: hidden;
@@ -195,9 +214,10 @@ nav{
         color: whitesmoke;
     }
     .navbar-toggler{ 
+        width: 60px;
+        height: 60px;
         border: 2px solid gray !important;
-        padding: 1rem;
-        border-radius: 4rem;
+        border-radius: 50%;
 
     }
     .navbar-dark .navbar-toggler{
@@ -206,6 +226,13 @@ nav{
 }
 /*end nav */
 /*skill */
+.skillName{
+    font-size: 16px;
+    color: gray;
+    text-align: center;
+    position: relative;
+    top: 34px;
+}
 .skill-container{
     display: flex;
     flex-wrap: wrap;
@@ -217,7 +244,12 @@ nav{
     width: 70%;
     top: 12px;
     left: 15%;
-    position: relative;   
+    position: relative;  
+    transition: width .4s; 
+}
+.skill-container .skill img:hover{
+    width: 75%;
+     
 }
 .skill-container .skill {
     margin: 20px;
@@ -232,9 +264,6 @@ nav{
     #skill{
         margin-left:1.2rem ;
         width: 100%;
-    }
-    .works .pj{
-        margin-left: 3rem;   
     }
     .works .button-group {
         left: 0rem;
@@ -342,6 +371,7 @@ nav{
     border-radius: .5rem;
     box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
 }
+
 #skill .skills-icon{
     font-size: 1.5rem;
     padding-right: 15px;
@@ -445,29 +475,97 @@ nav{
 /*end contact  */
 /* works */
 .works{
-    padding: 7rem 0rem 5rem 0rem;
-    
-    
+    margin: 20vh 0 10vh 0;
 }
+.gallery-container{
+	max-width: 1170px;
+	margin:auto;
+}
+
+
+/*.gallery*/
+.gallery{
+	width: 100%;
+	display: block;
+	min-height: 100vh;
+	/* background-color: #2a2932; */
+	padding: 30px 0;
+}
+.gallery .gallery-filter{
+	padding: 0 15px;
+	width: 100%;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.gallery .gallery-filter .filter-item{
+	color: black;
+	font-size: 18px;
+	text-transform: uppercase;
+	display: inline-block;
+	margin:0 10px;
+	cursor: pointer;
+	border-bottom: 2px solid transparent;
+	line-height: 1.2;
+	transition: all 0.3s ease;
+}
+.gallery .gallery-filter .filter-item.active{
+	color: #ff9800;
+	border-color : #ff9800;
+}
+.gallery .gallery-item{
+	
+	padding: 15px;
+}
+.gallery .gallery-item-inner img{
+	width: 100%;
+}
+.gallery .gallery-item.show{
+	animation: fadeIn 0.7s ease;
+}
+@keyframes fadeIn{
+	0%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 1;
+	}
+}
+.gallery .gallery-item.hide{
+	display: none;
+}
+
+
+
+/*  */
+ .grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,20rem);
+    justify-content: center;  
+    grid-column-gap: 5rem; 
+
+} 
 svg{
     width: 300px;
 }
 #services .service-item{
     height: 320px;
 }
+
 .grid-item img{
     cursor: pointer;
-    height: 200px;
+    height: 230px;
+    width: 260px;
+    border-radius: .3rem;
     transition: 0.5s ease-in-out;
     -webkit-transition: 0.3s ease-in-out;
     -moz-transition: 0.3s ease-in-out;
     -ms-transition: 0.3s ease-in-out;
     -o-transition: 0.3s ease-in-out;
 }
-.grid-item img:hover{
-    height: 220px;
-    width: 320px;
-}
+ .grid-item img:hover{
+    height: 230px;
+    width: 260px;
+} 
 .grid .text-uppercase{
     text-transform: uppercase !important;
     font-size: 18px !important;
@@ -478,10 +576,10 @@ svg{
     #about h2{
         text-align: center;
     }
-     .grid{
+     /* .grid{
         width: 300px;
         margin: 5rem auto; 
-    } 
+    }  */
     .grid-item .title{
         padding-top:20px ;
     }
@@ -490,10 +588,10 @@ svg{
     
 }
 @media screen and (min-width:720px) and (max-width:767px){
-    .grid{
+    /* .grid{
         width: 300px;
         margin: 5rem auto; 
-    } 
+    }  */
 }
 
 
@@ -555,6 +653,74 @@ svg{
     color: red;
     font-size: 40px;
 }
+/* test */
+.app__work-content h4 {
+    line-height: 1.5;
+    margin-top: 1rem;
+}
+.bold-text {
+    color: black;
+    font-size: 1rem;
+    font-weight: 800;
+    text-align: left;
+}
+ .app__work-item {
+     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.212);
+     text-align: center;
+    background-color: white;
+    border-radius: 0.5rem;
+    color: #000;
+    cursor: pointer;
+    flex-direction: column;
+    padding: 1rem;
+    transition: all .4s ease;
+    width: 300px;
+    margin: 30px 30px;
+}
+.app__work-item:hover{
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.274);
+}
+.app__work-content .cta i{
+    font-size: 2rem;
+}
+
+.app__flex {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.app__work-img {
+    height: 230px;
+    position: relative;
+    width: 100%;
+}
+
+.app__work-hover {
+    border-radius: 0.5rem;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+}
+
+.app__work-content {
+    flex-direction: column;
+    padding: 0.5rem;
+    position: relative;
+    width: 100%;
+}
+.app__work-content .app__work-tag {
+    background-color: white;
+    border-radius: 10%;
+    padding: 0.3rem 1rem;
+    position: absolute;
+    top: -25px;
+}
+/* test */
 /*end portfolio  */
 /* INTRO */
 .color{
@@ -589,6 +755,16 @@ svg{
 #home button:hover{
     box-shadow: inset 120px 0 0 0 red;
     color: white;
+}
+.filter.button-group .active{
+    background: #0D6EFD;
+    color: white;
+    border-radius: .2rem;
+}
+.filter.button-group button:hover{
+    background: #0D6EFD;
+    color: white;
+    border-radius: .2rem;
 }
  
 
